fix: trigger CI on PR

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,6 @@ name: Build and Release
 
 on:
   push:
-  pull_request:
 
 jobs:
   build:
@@ -59,7 +58,7 @@ jobs:
     
   release:
     needs: build
-    if: (github.event_name == 'push' && github.ref == 'refs/heads/main') || (github.event_name == 'pull_request' && github.base_ref == 'main')
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     
     permissions:
