--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libx11-dev libxrandr-dev libgl1-mesa-dev libopenal-dev libflac-dev libvorbis-dev
+        sudo apt-get install -y libx11-dev libxrandr-dev libgl1-mesa-dev libopenal-dev libflac-dev libvorbis-dev libudev-dev
     
     - name: Create build directory
       run: mkdir -p build
