--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,6 +48,14 @@ jobs:
     - name: Build
       run: cmake --build build --config Release
     
+    - name: Run tests
+      run: |
+        if [ "${{ matrix.os }}" = "windows-latest" ]; then
+          cd build && ctest -C Release --output-on-failure
+        else
+          cd build && ctest --output-on-failure
+        fi
+    
     - name: Upload client artifact
       uses: actions/upload-artifact@v4
       with:
@@ -64,7 +72,7 @@ jobs:
     
   release:
     needs: build
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/main' && needs.build.result == 'success'
     runs-on: ubuntu-latest
     
     permissions:
