--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,7 +37,7 @@ jobs:
       if: matrix.os == 'ubuntu-latest'
       run: |
         sudo apt-get update
-        sudo apt-get install -y libpthread-stubs0-dev libgl1-mesa-dev libx11-dev libxrandr-dev libxcursor-dev libxi-dev libudev-dev libfreetype6-dev libglew-dev libjpeg-dev libsndfile1-dev libopenal-dev libflac-dev libvorbis-dev
+        sudo apt-get install -y libpthread-stubs0-dev libgl1-mesa-dev libx11-dev libxrandr-dev libxcursor-dev libxi-dev libudev-dev libfreetype6-dev libglew-dev libjpeg-dev libsndfile1-dev libopenal-dev libflac-dev libvorbis-dev xvfb
     
     - name: Create build directory
       run: mkdir -p build
@@ -52,6 +52,10 @@ jobs:
       run: |
         if [ "${{ matrix.os }}" = "windows-latest" ]; then
           cd build && ctest -C Release --output-on-failure
+        elif [ "${{ matrix.os }}" = "ubuntu-latest" ]; then
+          export DISPLAY=:99
+          Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+          cd build && ctest --output-on-failure
         else
           cd build && ctest --output-on-failure
         fi
