feat: lobby + enhance packet callback with packetmanager

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,9 @@ copy_sfml_dlls(LayingGrassClient)
 if(UNIX)
     target_link_libraries(LayingGrassClient PRIVATE pthread)
 endif()
+if(WIN32)
+    target_link_libraries(LayingGrassClient PRIVATE ws2_32)
+endif()
 
 if(APPLE)
     set_target_properties(LayingGrassClient PROPERTIES
@@ -79,6 +82,9 @@ target_link_libraries(LayingGrassServer PRIVATE sfml-window sfml-system)
 copy_sfml_dlls(LayingGrassServer)
 if(UNIX)
     target_link_libraries(LayingGrassServer PRIVATE pthread)
+endif()
+if(WIN32)
+    target_link_libraries(LayingGrassServer PRIVATE ws2_32)
 endif()
 
 if(APPLE)
